[gd_scene load_steps=9 format=3 uid="uid://b13xmoowa143k"]

[ext_resource type="Texture2D" uid="uid://cr2mcgfvdk5lq" path="res://assets/prlxBackground1.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://bbfs5dbt858kq" path="res://scripts/main.gd" id="1_tbgi4"]
[ext_resource type="Texture2D" uid="uid://dncd4uljgferg" path="res://assets/plant-cartoon.jpg" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://bw13iwh4av6uu" path="res://assets/prlxBackground2.png" id="2_jyhfs"]
[ext_resource type="Texture2D" uid="uid://xlr2d8bewmi1" path="res://assets/prlxBackground3.png" id="3_tbgi4"]
[ext_resource type="FontFile" uid="uid://cvr8qmjtihjbl" path="res://assets/at01.ttf" id="6_tipki"]
[ext_resource type="Texture2D" uid="uid://by04u8f82bhxc" path="res://assets/offlight.png" id="7_85g3d"]
[ext_resource type="Texture2D" uid="uid://8o56nsu6f21k" path="res://assets/onlight.png" id="8_choun"]

[node name="Main" type="Node2D"]
script = ExtResource("1_tbgi4")

[node name="parallaxCollection" type="Node2D" parent="."]
position = Vector2(560, 495)

[node name="Parallax2D" type="Parallax2D" parent="parallaxCollection"]
z_index = -1
texture_filter = 1
scroll_scale = Vector2(0.2, 0.2)
repeat_size = Vector2(160, 0)
autoscroll = Vector2(6, 0)
repeat_times = 6

[node name="Sprite2D" type="Sprite2D" parent="parallaxCollection/Parallax2D"]
texture = ExtResource("1_o5qli")

[node name="Parallax2D2" type="Parallax2D" parent="parallaxCollection"]
z_index = -1
texture_filter = 1
scroll_scale = Vector2(0.4, 0.4)
repeat_size = Vector2(160, 0)
autoscroll = Vector2(8, 0)
repeat_times = 6

[node name="Sprite2D" type="Sprite2D" parent="parallaxCollection/Parallax2D2"]
texture = ExtResource("2_jyhfs")

[node name="Parallax2D3" type="Parallax2D" parent="parallaxCollection"]
z_index = -1
texture_filter = 1
scroll_scale = Vector2(0.7, 0.7)
repeat_size = Vector2(160, 0)
autoscroll = Vector2(12, 0)
repeat_times = 6

[node name="Sprite2D" type="Sprite2D" parent="parallaxCollection/Parallax2D3"]
texture = ExtResource("3_tbgi4")

[node name="plantCartoon" type="Sprite2D" parent="."]
position = Vector2(404.25, 235.375)
scale = Vector2(0.38437513, 0.3834375)
texture = ExtResource("2_0wfyh")

[node name="pageJump" type="Button" parent="."]
offset_left = 652.0
offset_top = 229.0
offset_right = 776.0
offset_bottom = 297.0
theme_override_fonts/font = ExtResource("6_tipki")
theme_override_font_sizes/font_size = 32
text = "Jump to Page"

[node name="lampTogggle" type="TextureButton" parent="."]
offset_left = 679.0
offset_top = 312.0
offset_right = 761.0
offset_bottom = 396.0
toggle_mode = true
texture_normal = ExtResource("7_85g3d")
texture_pressed = ExtResource("8_choun")
ignore_texture_size = true
stretch_mode = 0

[node name="HTTPRequest" type="HTTPRequest" parent="lampTogggle"]

[node name="snaphoto" type="Button" parent="."]
offset_left = 653.0
offset_top = 150.0
offset_right = 779.0
offset_bottom = 211.0

[node name="HTTPDisplay" type="HTTPRequest" parent="snaphoto"]

[node name="HTTPRequest2" type="HTTPRequest" parent="snaphoto"]

[node name="HTTPRequest" type="HTTPRequest" parent="snaphoto"]

[node name="popup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 186.0
offset_top = 42.0
offset_right = 619.0
offset_bottom = 468.0

[node name="actualPhoto" type="TextureRect" parent="popup"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 91.0
offset_top = 91.0
offset_right = 355.0
offset_bottom = 291.0
expand_mode = 3

[node name="okbutton" type="Button" parent="popup"]
visible = false
layout_mode = 0
offset_left = 172.0
offset_top = 329.0
offset_right = 272.0
offset_bottom = 370.0
theme_override_fonts/font = ExtResource("6_tipki")
theme_override_font_sizes/font_size = 32
toggle_mode = true
text = "OK!"

[connection signal="pressed" from="pageJump" to="." method="_on_page_jump_pressed"]
[connection signal="toggled" from="lampTogggle" to="." method="_on_lamp_togggle_toggled"]
[connection signal="pressed" from="snaphoto" to="." method="_on_snaphoto_pressed"]
[connection signal="request_completed" from="snaphoto/HTTPDisplay" to="." method="_on_http_display_request_completed"]
[connection signal="toggled" from="popup/okbutton" to="." method="_on_okbutton_toggled"]
